new features developed by me and fix some problems