@@ -1,15 +1,15 @@
 package api.spotify.service;
 
 import api.spotify.client.SpotifyClient;
-import api.spotify.dto.AlbumAvailableMarketsDTO;
+import api.spotify.dto.album.AlbumAvailableMarketsDTO;
 import api.spotify.dto.album.Album;
 import api.spotify.dto.album.AlbumResponseDTO;
 import api.spotify.dto.artist.ArtistInfoDTO;
+import api.spotify.exception.AuthException;
 import api.spotify.exception.SpotifyException;
+import feign.FeignException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.util.CollectionUtils;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -25,22 +25,25 @@ public class AlbumsService {
         try {
             return client.getAlbumsNewReleases(auth, limit, offset);
         } catch (RuntimeException | Error e) {
-            throw new SpotifyException("Spotify API error...");
+            throw e instanceof FeignException.Forbidden || e instanceof FeignException.Unauthorized ?
+                    new AuthException(e.getMessage()) : new SpotifyException("Spotify API error ".concat(e.getMessage()));
         }
     }
 
     public List<String> allNewReleasesAvailablesMarketsService(String auth, int limit, int offset) {
         try {
-            List<String> availableMarkets = new ArrayList<>();
-            AlbumResponseDTO albumResponseDTO = client.getAlbumsNewReleases(auth, limit, offset);
-            if (!CollectionUtils.isEmpty(albumResponseDTO.getAlbums().getItems())) {
-                albumResponseDTO.getAlbums().getItems()
-                        .stream().flatMap(a -> a.getAvailableMarkets().stream())
-                        .distinct().sorted().forEach(availableMarkets::add);
-            }
-            return availableMarkets;
+            return Optional.ofNullable(client.getAlbumsNewReleases(auth, limit, offset))
+                    .map(AlbumResponseDTO::getAlbums)
+                    .map(Album::getItems)
+                    .orElse(Collections.emptyList())
+                    .stream()
+                    .flatMap(a -> a.getAvailableMarkets().stream())
+                    .distinct()
+                    .sorted()
+                    .collect(Collectors.toList());
         } catch (RuntimeException | Error e) {
-            throw new SpotifyException("Spotify API error...");
+            throw e instanceof RuntimeException ? new RuntimeException((e).getMessage()) :
+                    new SpotifyException("Spotify API error ".concat(e.getMessage()));
         }
     }
 
@@ -49,24 +52,28 @@ public class AlbumsService {
             return Optional.ofNullable(client.getAlbumsNewReleases(auth, limit, offset))
                     .map(AlbumResponseDTO::getAlbums)
                     .map(Album::getItems)
-                    .orElse(Collections.emptyList())
+                    .orElse(Collections
+                            .emptyList())
                     .stream()
                     .map(album -> new AlbumAvailableMarketsDTO(
                             album.getName(),
                             album.getArtists()
                                     .stream()
-                                    .map(artist -> new ArtistInfoDTO(artist.getName().toUpperCase(),
+                                    .map(artist -> new ArtistInfoDTO(
+                                            artist.getName().toUpperCase(),
                                             artist.getType().toUpperCase()))
-                                    .collect(Collectors.toList()),
+                                    .collect(Collectors
+                                            .toList()),
                             album.getAvailableMarkets()
                                     .stream()
                                     .distinct()
                                     .sorted()
-                                    .collect(Collectors.toList())))
+                                    .collect(Collectors
+                                            .toList())))
                     .collect(Collectors.toList());
         } catch (RuntimeException | Error e) {
-            throw e instanceof NullPointerException ? new RuntimeException((e).getMessage()) :
-                    new SpotifyException("Spotify API error...");
+            throw e instanceof RuntimeException ? new RuntimeException((e).getMessage()) :
+                    new SpotifyException("Spotify API error ".concat(e.getMessage()));
         }
     }
 }
